@@ -1,6 +1,7 @@
 1.3.90 (1.4.0 rc1):
 -Add: TTA Enc plugin
 -Add: sad (Black & White audio file) support
+-Add: Improved saving of the last used conversion profile
 
 1.3.3:
 -Change: Piping is disabled by default, it can be activated in the config dialog though
